Endret tekst på bruker dialog

--- a/src/komponenter/brukerdialog/brukerDialog.less
+++ b/src/komponenter/brukerdialog/brukerDialog.less
@@ -1,7 +1,7 @@
 .bruker-dialog {
   position: fixed;
-  bottom: 1.5rem;
-  right: 1.5rem;
+  bottom:1.5rem;
+  right:1.5rem;
 
   &__container {
     box-shadow: 0 1px 4px rgba(0, 0, 0, .16);
@@ -45,6 +45,8 @@
     color: #262626;
     margin: 0;
     font-family: "Source Sans Pro",Arial,sans-serif;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   &:hover {
