--- a/src/komponenter/brukerdialog/brukerDialog.less
+++ b/src/komponenter/brukerdialog/brukerDialog.less
@@ -1,7 +1,9 @@
 .bruker-dialog {
-  position: fixed;
-  bottom:1.5rem;
-  right:1.5rem;
+  @media(min-width:992px){
+    margin-left: 0.5rem;
+    margin-top: 15.3rem; 
+  }
+
 
   &__container {
     box-shadow: 0 1px 4px rgba(0, 0, 0, .16);
