--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -1,8 +1,29 @@
 @import (reference) "../tiltak_variabler.less";
 .avtaletabell {
-    &__linkpanel {
-        margin-bottom: 0.5rem;
+
+    tr {
+        border: 1px solid black;
     }
+
+    tbody tr {
+        margin-bottom: 0.5rem;
+        cursor: pointer;
+        background-color: white;
+        &:hover {
+            border-color: #0067c5;
+            border-color: var(--ac-link-panel-hover-border,var(--a-border-action));
+            box-shadow: 0 2px 4px -2px rgba(0,0,0,.1), 0 4px 6px -1px rgba(0,0,0,.1);
+            box-shadow: var(--a-shadow-medium);
+        }
+    }
+
+    td {
+        border-bottom: 0;
+        position: relative;
+    }
+
+    border-spacing: 0px 10px;
+    border-collapse: separate;
 
     .linkpanel.skjulIndikator span {
         display: none;
@@ -29,71 +50,12 @@
         height: 16px;
         width: 16px;
         position: absolute;
-        left: -1.55rem;
+        left: -0.5rem;
     }
 
     .uthevet {
         font-weight: bold;
     }
-
-    &__rad {
-        display: flex;
-        justify-content: flex-start;
-        flex-wrap: nowrap;
-        align-items: center;
-        width: 100%;
-    }
-
-    &__status-rad {
-        display: flex;
-    }
-
-    &__beslutter {
-        &-veileder {
-            min-width: 8rem;
-            padding-right: 1rem;
-        }
-
-        &-deltakerOgBedrift {
-            width: 10rem;
-            margin-right: 1rem;
-        }
-
-        &-dato {
-            min-width: 10rem;
-        }
-
-        &-status {
-            width: 8rem;
-        }
-    }
-
-    &__veileder {
-        &-veileder {
-            min-width: 8rem;
-        }
-
-        &-deltakerOgBedrift {
-            width: 8.5rem;
-            word-wrap: break-word;
-        }
-
-        &-dato {
-            min-width: 6rem;
-            &--arbeidsgiver-deltaker {
-                min-width: 9.5rem;
-            }
-        }
-
-        &-statusikon {
-            width: 4rem;
-        }
-
-        &-status {
-            width: 6rem;
-        }
-    }
-
 }
 
 
