Toppmargin for å aligne tabellen

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -24,6 +24,7 @@
 
     border-spacing: 0px 10px;
     border-collapse: separate;
+    margin-top: -10px;
 
     .linkpanel.skjulIndikator span {
         display: none;
