--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -1,30 +1,51 @@
 @import (reference) "../tiltak_variabler.less";
 .avtaletabell {
-
-    tr {
-        border: 1px solid black;
-    }
-
-    tbody tr {
-        margin-bottom: 0.5rem;
-        cursor: pointer;
-        background-color: white;
-        &:hover {
-            border-color: #0067c5;
-            border-color: var(--ac-link-panel-hover-border,var(--a-border-action));
-            box-shadow: 0 2px 4px -2px rgba(0,0,0,.1), 0 4px 6px -1px rgba(0,0,0,.1);
-            box-shadow: var(--a-shadow-medium);
-        }
-    }
-
-    td {
-        border-bottom: 0;
-        position: relative;
-    }
-
     border-spacing: 0px 10px;
     border-collapse: separate;
     margin-top: -10px;
+
+    tbody tr {
+        cursor: pointer;
+        &:hover {
+            box-shadow: var(--a-shadow-medium);
+            & td {
+                border-top: 1px;
+                border-bottom: 1px;
+                border-left: 0;
+                border-right: 0;
+                border-style: solid;
+                border-color: var(--ac-link-panel-hover-border,var(--a-border-action));
+                text-decoration: underline;
+                color: var(--ac-link-panel-hover-border,var(--a-border-action));
+                &:first-child {
+                    border-left: 1px;
+                    border-style: solid;
+                }
+                &:last-child {
+                    border-right: 1px;
+                    border-style: solid;
+                }
+            }
+        }
+    }
+
+    th, td {
+        background-color: white;
+    }
+
+    td {
+        border-top: 1px solid @navGraBakgrunn;
+        border-bottom: 1px solid @navGraBakgrunn;
+        border-right: 0;
+        border-left: 0;
+        &:first-child {
+            position: relative;
+            border-left: 1px solid @navGraBakgrunn;
+        }
+        &:last-child {
+            border-right: 1px solid @navGraBakgrunn;
+        }
+    }
 
     .linkpanel.skjulIndikator span {
         display: none;
@@ -34,13 +55,23 @@
         margin-top: 2rem;
     }
 
-    &__header {
-        padding: 1rem;
-        font-weight: bold;
-        background-color: white;
-        border: 1px solid @navGra40;
-        border-radius: 0.25rem;
-        margin-bottom: 1rem;
+    & th {
+        border-top: 1px;
+        border-bottom: 1px;
+        border-style: solid;
+        border-left: 0;
+        border-right: 0;
+        border-color: @navGra40;
+        &:first-child {
+            border-left: 1px solid @navGra40;
+            border-top-left-radius: 0.25rem;
+            border-bottom-left-radius: 0.25rem;
+        }
+        &:last-child {
+            border-right: 1px solid @navGra40;
+            border-top-right-radius: 0.25rem;
+            border-bottom-right-radius: 0.25rem;
+        }
     }
 
     .ulest-varsel-ikon {
@@ -52,10 +83,6 @@
         width: 16px;
         position: absolute;
         left: -0.5rem;
-    }
-
-    .uthevet {
-        font-weight: bold;
     }
 }
 
