Mer styling fiks

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -56,6 +56,7 @@
     }
 
     & th {
+        font-size: var(--a-font-size-medium);
         border-top: 1px;
         border-bottom: 1px;
         border-style: solid;
