Overstyr css fra designsystem

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -31,6 +31,7 @@
 
     th, td {
         background-color: white;
+        border-bottom-width: 1px !important; // Overstyr design-css
     }
 
     td {
