Ingen whitespace-wrap på etikett

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -53,6 +53,10 @@
         &:last-child {
             border-right: 1px solid @navGraBakgrunn;
         }
+        & .navds-tag {
+            width: 100%;
+            white-space: nowrap;
+        }
     }
 
     .linkpanel.skjulIndikator span {
