Align header-tekst til midten

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -68,6 +68,7 @@
     }
 
     & th {
+        text-align: center;
         font-size: var(--a-font-size-medium);
         border-top: 1px;
         border-bottom: 1px;
