Ikke ha animasjon på statusikon on hover

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -6,7 +6,7 @@
 
     tbody tr {
         cursor: pointer;
-        & svg {
+        .avtaletabell__pil-hoyre {
             transition: transform .2s,-webkit-transform .2s;
         }
         &:hover {
@@ -29,7 +29,7 @@
                     border-style: solid;
                 }
             }
-            & svg {
+            .avtaletabell__pil-hoyre  {
                 -webkit-transform: translateX(4px);
                 transform: translateX(4px);
             }
