--- a/src/BeslutterOversikt/BeslutterOversiktSkeleton/BeslutterOversiktSkeleton.less
+++ b/src/BeslutterOversikt/BeslutterOversiktSkeleton/BeslutterOversiktSkeleton.less
@@ -7,4 +7,9 @@
         align-items: center;
         height: 10rem;
     }
+
+    td {
+        padding: 0;
+        background: transparent;
+    }
 }
