--- a/src/BeslutterOversikt/BeslutterOversiktSkeleton/BeslutterOversiktSkeleton.less
+++ b/src/BeslutterOversikt/BeslutterOversiktSkeleton/BeslutterOversiktSkeleton.less
@@ -8,8 +8,43 @@
         height: 10rem;
     }
 
+}
+table.avtaleoversiktskeleton {
+    border-spacing: 0px 10px;
+    border-collapse: separate;
+    margin-top: -10px;
+
+    th {
+        background-color: white;
+    }
+    th, td {
+        border-bottom-width: 1px !important; // Overstyr design-css
+    }
+
     td {
         padding: 0;
+        border: 0;
         background: transparent;
+    }
+
+    & th {
+        text-align: center;
+        font-size: var(--a-font-size-medium);
+        border-top: 1px;
+        border-bottom: 1px;
+        border-style: solid;
+        border-left: 0;
+        border-right: 0;
+        border-color: @navGra40;
+        &:first-child {
+            border-left: 1px solid @navGra40;
+            border-top-left-radius: 0.25rem;
+            border-bottom-left-radius: 0.25rem;
+        }
+        &:last-child {
+            border-right: 1px solid @navGra40;
+            border-top-right-radius: 0.25rem;
+            border-bottom-right-radius: 0.25rem;
+        }
     }
 }
