--- a/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
+++ b/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
@@ -6,10 +6,8 @@ table.avtaleoversiktskeleton {
     margin-top: -10px;
 
     td {
-        border-bottom-width: 1px !important; // Overstyr design-css
-        padding: 0;
+        padding: 10px;
         border: 0;
-        background: transparent;
     }
 }
 
