--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -17,9 +17,9 @@
                 border-left: 0;
                 border-right: 0;
                 border-style: solid;
-                border-color: var(--ac-link-panel-hover-border,var(--a-border-action));
+                border-color: @navBla;
                 text-decoration: underline;
-                color: var(--ac-link-panel-hover-border,var(--a-border-action));
+                color: @navBla;
                 &:first-child {
                     border-left: 1px;
                     border-style: solid;
