--- a/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
+++ b/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
@@ -1,5 +1,16 @@
 @import (reference) "../../tiltak_variabler.less";
 
+table.avtaleoversiktskeleton {
+    border-spacing: 0px 10px;
+    border-collapse: separate;
+    margin-top: -10px;
+
+    td {
+        padding: 10px;
+        border: 0;
+    }
+}
+
 .avtaleoversiktskeleton {
     &__spinner {
         display: flex;
