--- a/src/BeslutterOversikt/BeslutterOversiktSkeleton/BeslutterOversiktSkeleton.less
+++ b/src/BeslutterOversikt/BeslutterOversiktSkeleton/BeslutterOversiktSkeleton.less
@@ -7,4 +7,15 @@
         align-items: center;
         height: 10rem;
     }
+
+}
+table.avtaleoversiktskeleton {
+    border-spacing: 0px 10px;
+    border-collapse: separate;
+    margin-top: -10px;
+
+    td {
+        padding: 0;
+        border: 0;
+    }
 }
