Tiltakstype vises i tabell for alle

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -4,6 +4,10 @@
     border-collapse: separate;
     margin-top: -10px;
 
+    &__nowrap {
+        white-space: nowrap;
+    }
+
     tbody tr {
         cursor: pointer;
         .avtaletabell__pil-hoyre {
