--- a/src/index.less
+++ b/src/index.less
@@ -41,8 +41,13 @@ svg {
 .accordion .navds-accordion__content,
 .accordion .navds-accordion__header {
     border: none;
+    --__ac-accordion-header-shadow-color:none;
 }
 
 .accordion .navds-accordion__header:focus {
     border-radius: 0.5rem;
 }
+
+
+       
+   
