Tausthetserklæring modal opdatert

--- a/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
+++ b/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
@@ -46,6 +46,12 @@
         margin-top: 0.75rem;
     }
 
+    &__knapper-container {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 1rem;
+    }
+
     @media (min-width: 768px) {
         &__modal {
             width: 40rem;
