--- a/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
+++ b/src/AvtaleOversikt/EtterRegistrering/EtterRegistrering.less
@@ -21,7 +21,8 @@
     }
 
     &__header {
-        margin-bottom: 1rem;
+        //margin-left: 3rem;
+        //margin-bottom: 1rem;
     }
 
     &__sokfelt-tag {
@@ -48,6 +49,8 @@
     }
 
     &__lagreKnapp {
+        display: flex;
+        justify-content: flex-end;
         margin-top: 0.75rem;
     }
 
@@ -73,7 +76,6 @@
     @media (min-width: 768px) {
         &__modal {
             width: 40rem;
-            padding: 2.5rem;
         }
         &__panel_modal {
             width: 100%;
