--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -51,7 +51,7 @@
   &__topIconContainer {
     display: flex;
     justify-content: center;
-    margin: -3.8rem auto 0 auto;
+    margin: -3.8rem auto 0 2.5rem;
     @media (max-height: 710px) {
       display: none;
     }
