--- a/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
+++ b/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
@@ -1,27 +1,16 @@
 .taushetserklæring {
-    &__modal-container {
-        overflow: visible;
-        display: flex;
-    }
-
     &__modal {
-        overflow-y: scroll;
-        width: 16rem;
-        padding: 2.5rem 0.5rem 0.5rem;
-        height: 100%;
-        min-height: 14rem;
-
-        & > .alertstripe {
-            margin-top: 1.5rem;
-        }
+        height: calc(100% - 5rem);
+        position: relative;
     }
 
     &__topIconContainer {
-        position: fixed;
+        position: absolute;
         justify-content: center;
+        
         width: 80px;
-        right: 48%;
-        top: 2.3%;
+        right: 43%;
+        top: 0.2rem;
         @media (max-height: 710px) {
             display: none;
         }
@@ -46,26 +35,31 @@
         margin-top: 0.75rem;
     }
 
-    @media (min-width: 768px) {
-        &__modal {
-            width: 40rem;
-            padding: 2.5rem;
+    &__knapper-container {
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+
+        & > :last-child {
+            align-self: end;
         }
+    }
+
+    @media (min-width: 768px) {
         &__panel_modal {
             width: 100%;
-            padding: 0;
         }
 
         &__modal .varsel__innhold {
-            width: 60%;
+            width: 100%;
         }
     }
     @media (min-width: 100px) and (max-width: 767px) {
         &__modal .varsel__innhold {
-            width: 60%;
+            width: 100%;
         }
         &__topIconContainer {
-            top: -1.7%;
+            top: 1rem;
             right: 43%;
         }
         &__modal {
