Lagt til versjoner til avtaler for beslutter
Co-authored-by: Magnus Rom <magnus.skalleberg.rom@nav.no>

--- a/src/BeslutterSide/BeslutterSide.less
+++ b/src/BeslutterSide/BeslutterSide.less
@@ -19,7 +19,10 @@
     }
 
     &__avtale-wrapper {
-        margin-bottom: 4rem;
+        &:last-child {
+            margin-bottom: 4rem;
+        }
+        margin-bottom: 1rem;
     }
 
     &__hoved-tittel {
