--- a/src/BeslutterSide/beslutterPanel/beslutterPanel.less
+++ b/src/BeslutterSide/beslutterPanel/beslutterPanel.less
@@ -25,7 +25,7 @@
   &__infovisning-rad {
     display: flex;
     align-items: center;
-    margin: 1rem 0;
+    margin-top: 1rem;
 
     & > p:nth-child(1) {
       min-width: 9rem;
@@ -61,6 +61,8 @@
 
   &__input-wrapper {
     display: flex;
+    margin-left: 1rem;
+    width: 5rem;
   }
 
   @media(min-width: @container-tablet) {
@@ -75,6 +77,10 @@
 
     &__infovisning-rad {
       flex-direction: row;
+      .navds-form-field {
+        gap: 0;
+        grid-gap: 0;
+      }
     }
   }
 }
