Select for paginering
Co-authored-by: Odd Andreas <odd.andres.sorsether@nav.no>

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -28,7 +28,7 @@
 
 .avtaleoversikt-pagination {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin-top: 2rem;
 }
