--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -24,6 +24,21 @@
             margin-top: 1rem;
         }
     }
+
+    &__divc {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: flex-end; 
+        width: 100%;
+    }
+    &__divc2 {
+        display: flex;
+        flex-direction: row;
+        width: 90%;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 .avtaleoversikt-pagination {
@@ -31,4 +46,14 @@
     flex-direction: row;
     align-items: center;
     margin-top: 2rem;
+    justify-content: center;
+
+
+
+
+    >.navds-form-field {
+        align-self: flex-end;
+        justify-self: flex-end;
+    }
+    
 }
