--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreKontaktInfo/EndreKontaktInformasjon.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreKontaktInfo/EndreKontaktInformasjon.less
@@ -1,18 +1,8 @@
 .endreKontaktInformasjon {
-  margin-top: 2rem;
 
-  &__inputfelter {
-    display: flex;
+  &__container{
+    display:flex;
     flex-direction: column;
-
-    &:nth-child(1) {
-      margin-top: 1.5rem;
-      margin-bottom: 1rem;
-    }
-
-    & > .skjemaelement {
-      width: 100%;
-    }
   }
 
   &__link {
@@ -24,42 +14,22 @@
     margin-right: 0.5rem;
   }
 
-  @media (min-width: 768px) {
+   &__tittel {
+    margin-top: 1.5rem;
+    margin-bottom: 0.75rem;
+  }
+
+  &__rad {
     display: flex;
-    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 1rem;
 
-    &__avsnitt {
-      margin-bottom: 2.5rem;
-    }
+    
+    .navds-form-field {
+      width: calc(50% - 1rem);
 
-    &__tittel {
-      margin-bottom: 0.75rem;
-    }
-
-    &__inputfelter {
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      flex-wrap: wrap;
-      flex: 0 45%;
-
-
-      .navds-form-field {
-        width: calc(50% - 1rem);
-
-
-        &:nth-child(odd) {
-          margin-right: 1rem;
-        }
-      }
-
-      & > .skjemaelement {
-        width: 45%;
-        margin-bottom: 1rem;
-
-        &:nth-child(1) {
-          margin-right: 0.75rem;
-        }
+      &:nth-child(odd) {
+        margin-right: 1rem;
       }
     }
   }
