--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreTilskudd/EndreTilskuddsberegning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreTilskudd/EndreTilskuddsberegning.less
@@ -1,14 +1,5 @@
 .endreTilskuddsBeregning {
-    .opprett-avtale__tiltakstypeWrapper {
-        margin: 0.5rem 0;
-        display: flex;
-        flex-wrap: wrap;
-        .inputPanel {
-            margin-bottom: 0.5rem;
-            margin-right: 0.25rem;
-            flex: 0 43%;
-        }
-    }
+
     &__lenke {
         display: flex;
         align-items: center;
@@ -25,11 +16,7 @@
         margin: 1.5rem 0;
     }
 
-    @media (min-width: 768px) {
-        .opprett-avtale__tiltakstypeWrapper {
-            .inputPanel {
-                flex: 0 45%;
-            }
-        }
-    }
+    .navds-form-field {
+        width: calc(50% - 1rem);
+    }  
 }
