--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -25,19 +25,11 @@
         }
     }
 
-    &__divc {
+    &__pagination-container {
         display: flex;
-        flex-direction: row;
         align-items: flex-end;
         justify-content: flex-end; 
         width: 100%;
-    }
-    &__divc2 {
-        display: flex;
-        flex-direction: row;
-        width: 90%;
-        align-items: center;
-        justify-content: center;
     }
 }
 
@@ -48,12 +40,16 @@
     margin-top: 2rem;
     justify-content: center;
 
-
-
+    &__pagination {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
 
     >.navds-form-field {
         align-self: flex-end;
         justify-self: flex-end;
+        background-color: #4cadcd;
     }
-    
+
 }
