Viser hendelselogg for beslutter slik som arbeidsgiver og deltaker

--- a/src/BeslutterSide/BeslutterSide.less
+++ b/src/BeslutterSide/BeslutterSide.less
@@ -18,6 +18,14 @@
         max-width: @container-desktop;
     }
 
+    &__head-meny-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
     &__avtale-wrapper, &__avtale-versjon-wrapper {
         box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
     }
