--- a/src/BeslutterOversikt/AvtaleTabellBeslutterHeader.less
+++ b/src/BeslutterOversikt/AvtaleTabellBeslutterHeader.less
@@ -1,30 +1,9 @@
 @import (reference) "../tiltak_variabler.less";
-.avtaletabellradheader {
+.avtaletabellbeslutterheader {
   &__label-container {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-
-  &__sortering {
-    &--asc,
-    &--asc-selected {
-      bottom: 0.1rem;
-      display: flex;
-      justify-content: flex-end;
-    }
-
-    &--desc,
-    &--desc-selected {
-      top: 0.1rem;
-      display: flex;
-      justify-content: flex-start;
-    }
-
-    &--asc-selected,
-    &--desc-selected {
-      opacity: 0.5;
-    }
   }
 
   th {
