Sjekker, og advarer, om beløpet er urimelig høyt

--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -9,6 +9,10 @@
     }
   }
 
+  &__alert {
+    margin-top: 1rem;
+  }
+
   &__tilskuddsprosent-heading, &__tilskuddsprosent {
     margin-bottom: 1.25rem;
   }
