--- a/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningStatus/GodkjenningRad/GodkjenningRad.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningStatus/GodkjenningRad/GodkjenningRad.less
@@ -3,7 +3,9 @@
         float: right;
     }
     &__godkjenningIkon {
-        padding-left: 1rem;
+        display: inline-block;
+        margin-left: 1rem;
+        vertical-align: bottom;
     }
     display: flex;
     justify-content: space-between;
