--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -12,7 +12,7 @@
     }
 
     &__innhold {
-        min-width: 29.125rem;
+        //min-width: 29.125rem;
     }
 
     &__container {
@@ -33,6 +33,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        //width:88%;
 
         .popover {
             &__content-inner {
