--- a/src/index.less
+++ b/src/index.less
@@ -16,6 +16,7 @@ body,
 body .tiltaksgjennomforing {
     background-color: #f1f1f1;
     font-family: 'Source Sans Pro', Arial, sans-serif;
+    width: 100%;
 }
 
 svg {
