Lagt til flere steg

--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/AvtaleinfoFeltSjekk/AvtaleinfoFeltSjekk.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/AvtaleinfoFeltSjekk/AvtaleinfoFeltSjekk.less
@@ -26,6 +26,10 @@
         &--farge-lyslilla {
             border-left: 3px solid #d09cd0;
         }
+
+        &--farge-lysraad {
+            border-left: 3px solid #f7bebe;
+        }
     }
 
     &__etikettInfo {
