feat. fjernet prosentsats for vtao tilskuddsperioder

--- a/src/AvtaleSide/steg/BeregningTilskudd/visningTilskuddsperioder/visningTilskuddsperioder.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/visningTilskuddsperioder/visningTilskuddsperioder.less
@@ -1,4 +1,10 @@
 .visning-tilskuddsperioder {
+    .navds-label {
+        &:last-child {
+            margin-right: 1rem;
+        }
+    }
+
     &__header {
         margin-bottom: 2rem;
     }
