--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -22,7 +22,8 @@
     }
 
     &__tjenestepensjon,
-    &__arbeidsgiveravgift {
+    &__arbeidsgiveravgift,
+    &__feriepenger {
         .navds-form-field {
             & > input,
             & > div {
