feat. readonly for meny i arbeidstreningsavtaler

--- a/src/AvtaleSide/Oppgavelinje/OppgaveLenker.css
+++ b/src/AvtaleSide/Oppgavelinje/OppgaveLenker.css
@@ -1,3 +1,11 @@
 .modelLenker a {
     margin: 1rem 0;
 }
+
+.modelLenker-disabled a {
+    margin: 1rem 0;
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.7;
+    color: #6d6d6d;
+}
