--- a/src/komponenter/Innholdsboks/Innholdsboks.less
+++ b/src/komponenter/Innholdsboks/Innholdsboks.less
@@ -8,6 +8,13 @@
 
     &__innhold {
         padding: 1.25rem;
+
+        &.is-readonly {
+            pointer-events: none;
+            cursor: default;
+            opacity: 0.7;
+            color: #6d6d6d;
+        }
     }
 
     &:last-child {
@@ -27,12 +34,12 @@
     }
 }
 
-.innholdsboks.godkjenning.is-readonly {
-    pointer-events: none;
-    cursor: default;
-    opacity: 0.7;
-    color: #6d6d6d;
-}
+//.innholdsboks.godkjenning.is-readonly {
+//    pointer-events: none;
+//    cursor: default;
+//    opacity: 0.7;
+//    color: #6d6d6d;
+//}
 
 .avtaleside__ekspanderbart-panel .ekspanderbartPanel__innhold {
     padding: 0;
