Endre ordlyd på "avslått" til "returnert"
Begrepet "avslått" når tilskuddsperioder blir sendt tilbake
til veileder oppleves som mer "endelig" enn tiltenkt.

--- a/src/BeslutterSide/beslutterPanel/beslutterPanel.less
+++ b/src/BeslutterSide/beslutterPanel/beslutterPanel.less
@@ -49,27 +49,21 @@
         align-items: flex-start;
     }
 
-    &__avslagtext-subingress {
+    &__returtekst-subingress {
         text-align: center;
     }
 
-    &__avslag-boks {
+    &__returboks {
         background-color: #e9e7e7;
         border-radius: 4px;
         padding: 2rem;
         margin-top: 1rem;
-    }
-
-    &__avslag-input {
         display: flex;
         justify-content: space-between;
+        gap: 1rem;
     }
 
-    &__avslagsforklaring-wrapper {
-        margin-left: 1rem;
-    }
-
-    &__avslagsforklaring {
+    &__returforklaring {
         width: 25rem;
     }
 
