--- a/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
+++ b/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
@@ -5,13 +5,13 @@
         display: flex;
         margin-bottom: 1.5rem;
         padding: 1rem 0;
+        gap: 0.625rem;
     }
     &__tekst {
-        margin-left: 0.625rem;
         margin-top: -0.3rem;
     }
     &__ikon {
-        width: 60px;
+        width: 36px;
         & > svg {
             width: 1.75rem;
             height: 1.75rem;
@@ -21,9 +21,7 @@
     @media (min-width: 768px) {
         &__element {
             padding: 1rem;
-        }
-        &__tekst {
-            margin-left: 1rem;
+            gap: 1rem;
         }
         &__ikon {
             & > svg {
