--- a/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
+++ b/src/AvtaleOversikt/Taushetserklæring/Taushetserklæring.less
@@ -1,55 +1,11 @@
+@import (reference) '../../tiltak_variabler.less';
+
 .taushetserklæring {
-    &__modal {
-        height: calc(100% - 5rem);
-        position: relative;
-    }
-
-    &__topIconContainer {
-        position: absolute;
-        justify-content: center;
-
-        width: 80px;
-        right: 43%;
-        top: 0.2rem;
-        @media (max-height: 710px) {
-            display: none;
-        }
-    }
-
     &__header {
         margin-bottom: 1rem;
     }
 
-    &__lenker {
-        display: flex;
-        flex-direction: column;
-        line-height: 1.5rem;
-    }
-
-    &__lenke {
-        display: flex;
-        margin: 0.5rem;
-    }
-
-    &__lagreKnapp {
-        margin-top: 0.75rem;
-    }
-
-    &__knapper-container {
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-
-        & > :last-child {
-            align-self: end;
-        }
-    }
-
     @media (min-width: 768px) {
-        &__panel_modal {
-            width: 100%;
-        }
-
         &__modal .varsel__innhold {
             width: 100%;
         }
@@ -57,18 +13,6 @@
     @media (min-width: 100px) and (max-width: 767px) {
         &__modal .varsel__innhold {
             width: 100%;
-        }
-        &__topIconContainer {
-            top: 1rem;
-            right: 43%;
-        }
-        &__modal {
-            width: 100%;
-            padding: 2.5rem;
-        }
-        &__panel_modal {
-            width: 100%;
-            padding: 0;
         }
     }
 }
