--- a/src/komponenter/alleredeOpprettetTiltak/innholdsvisning/alleredeOpprettetAvtale.less
+++ b/src/komponenter/alleredeOpprettetTiltak/innholdsvisning/alleredeOpprettetAvtale.less
@@ -1,12 +1,8 @@
 .alleredeOpprettetAvtale {
     display: flex;
-    justify-content: center;
-    padding: 0 2rem;
-
-    &__info {
-        display: inline-block;
-        margin: 1.5rem 0;
-    }
+    flex-direction: column;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 
     &__periode-wrapper {
         & > div:nth-child(1) {
@@ -15,20 +11,14 @@
     }
 
     &__avtale {
-        margin-left: 4rem;
+        margin-left: 1rem;
         padding: 0 3rem 1.75rem 2rem;
         position: relative;
-        border-left: 1px dashed #00347d;
-        background-color: white;
-
-        &:last-child {
-            padding-bottom: 0.25rem;
-        }
 
         &::before {
             position: absolute;
             left: -12.5px;
-            top: -4px;
+            top: -2px;
             content: '';
             border: 1px solid #00347d;
             border-radius: 50%;
@@ -37,18 +27,6 @@
             width: 1.5rem;
             transition: all 500ms ease-in-out;
         }
-    }
-
-    &__rad-element {
-        display: flex;
-
-        & > p:nth-child(1) {
-            margin-right: 0.375rem;
-        }
-    }
-
-    &__info-not-bold {
-        font-weight: 400 !important;
     }
 
     &__avtale-detaljer {
@@ -72,10 +50,6 @@
         & > span:nth-child(1) {
             margin-right: 0.75rem;
         }
-    }
-
-    &__lenke-detaljer-wrapper {
-        display: flex;
     }
 
     &__chevron-detaljer {
