--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreStillingbeskrivelse/EndreStillingbeskrivelse.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreStillingbeskrivelse/EndreStillingbeskrivelse.less
@@ -22,6 +22,7 @@
 
     &__stilling-input-wrapper {
         display: flex;
+        align-items: flex-start;
         justify-content: center;
 
         .navds-form-field {
