Redusert lengde på avtale-tittel hvis tiltakstypenavn er langt

--- a/src/komponenter/Banner/Banner.less
+++ b/src/komponenter/Banner/Banner.less
@@ -27,3 +27,7 @@
     width: 100%;
     align-items: center;
 }
+
+.banner-lang-tittel {
+    font-size: var(--a-font-line-height-heading-small);
+}
