--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreKontaktInfo/EndreKontaktInformasjon.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreKontaktInfo/EndreKontaktInformasjon.less
@@ -13,17 +13,13 @@
         margin-bottom: 0.75rem;
     }
 
-    &__rad {
-        display: flex;
-        align-items: flex-start;
-        margin-bottom: 1rem;
-
-        .navds-form-field {
-            width: calc(50% - 1rem);
-
-            &:nth-child(odd) {
-                margin-right: 1rem;
-            }
+    &__grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 1rem;
+        row-gap: 1rem;
+        .telefonnummer-input-container {
+            width: 60%;
         }
     }
 }
