feat. legg til diskresjonskoder for Vikafossen i oversikten
Hent diskresjonskoder fra PDL for å vise kode-6/7 for Vikafossen
i avtale-oversikten

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -55,7 +55,7 @@
         &:last-child {
             border-right: 1px solid @navGraBakgrunn;
         }
-        & .navds-tag {
+        & .etikett-status {
             width: 100%;
             white-space: nowrap;
         }
