spacing på arena oppryding alert boks

--- a/src/AvtaleSide/steg/VarighetSteg/varighetSteg.less
+++ b/src/AvtaleSide/steg/VarighetSteg/varighetSteg.less
@@ -2,20 +2,18 @@
     &__ingress {
         margin-bottom: 1rem;
     }
-
+    &__info-arena-opprydding-alert,
     &__rad {
         margin-bottom: 2rem;
     }
 
-    &__info-arena-opprydding-alert &__Stillingsprosent-input-container,
     &__lagre-knapp {
         margin: 1rem 0;
     }
 
-    &__info-arena-opprydding-avsnitt {
-        &:nth-child(odd) {
-            margin-bottom: 1rem;
-        }
+    &__info-arena-opprydding-alert-innhold {
+        display: grid;
+        gap: 1rem;
     }
 
     &__sommerjobb-deltaker-over30-alert {
