chore. husky deprecated pre-commit
chore. replaced deprecated lodash.isequal with node:util.isDeepStrictEqual

fix. prettify lint

--- a/src/komponenter/KnappMedIkon/KnappMedIkon.less
+++ b/src/komponenter/KnappMedIkon/KnappMedIkon.less
@@ -22,7 +22,7 @@
     }
     &__backgroundColor {
         background-color: unset;
-        color: #0067c5 //@navBla;;
+        color: #0067c5; //@navBla;
     }
 
     &:hover {
