feat. vise eget filter for returnerte tilskuddsperioder som har kommet tilbake til beslutter
* Nytt filter for returnerte perioder som kan behandles
* Mulighet for å trykke på hele linjen for å sortere

--- a/src/BeslutterOversikt/AvtaleTabellBeslutterHeader.less
+++ b/src/BeslutterOversikt/AvtaleTabellBeslutterHeader.less
@@ -1,6 +1,7 @@
 @import (reference) '../tiltak_variabler.less';
 .avtaletabellbeslutterheader {
     &__label-container {
+        cursor: pointer;
         display: flex;
         justify-content: center;
         align-items: center;
