Feat/beslutter gjeldende tilskuddsperiode (#1347)
* feat. justeringer i beslutteroversikten for å tilpasse ny spørring i db

* feat. vise eget filter for returnerte tilskuddsperioder som har kommet tilbake til beslutter

* Nytt filter for returnerte perioder som kan behandles
* Mulighet for å trykke på hele linjen for å sortere

* fix. vis sorteringsindikator for beslutter

--- a/src/BeslutterOversikt/AvtaleTabellBeslutterHeader.less
+++ b/src/BeslutterOversikt/AvtaleTabellBeslutterHeader.less
@@ -1,9 +1,31 @@
 @import (reference) '../tiltak_variabler.less';
 .avtaletabellbeslutterheader {
     &__label-container {
+        cursor: pointer;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    &__sortering {
+        &--asc,
+        &--asc-selected {
+            bottom: 0.1rem;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        &--desc,
+        &--desc-selected {
+            top: 0.1rem;
+            display: flex;
+            justify-content: flex-start;
+        }
+
+        &--asc-selected,
+        &--desc-selected {
+            opacity: 0.5;
+        }
     }
 
     th {
