feat. legge til rette for å legge til kid-nummer i avtalen
* Viser kid og kontonummer i oppsummering
* Legger til rette for å oppdatere kontonummer etter at avtalen er inngått

--- a/src/komponenter/alleredeOpprettetTiltak/innholdsvisning/RadInfo.module.less
+++ b/src/komponenter/alleredeOpprettetTiltak/innholdsvisning/RadInfo.module.less
@@ -1,4 +1,4 @@
-.rad_element {
+.rad-element {
     display: flex;
 
     & > p:nth-child(1) {
@@ -6,6 +6,6 @@
     }
 }
 
-.info_not_bold {
+.info-not-bold {
     font-weight: 400;
 }
